# PowerGrid

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile.build_docker  Dockerfile.build_native  Makefile  README.md  docker-compose.yaml
chaos/scripts/: build.sh  run.sh  stop.sh
chaos/src/chaos_sensor/: run.py
chaos/src/dashboard/: flows.json  package-lock.json  package.json
chaos/src/sink/: run.py
charger/: Cargo.toml
charger/src/: car_handling.rs  charger.rs  lib.rs  main.rs  offer_handling.rs  topic_handler.rs
consumer/: Cargo.toml  README.md
consumer/configs/: README.md  slp.csv
consumer/docs/: arch.xml
consumer/scripts/: run.sh  run_windows_without_wsl.sh  stop.sh
consumer/src/: consumer.rs  lib.rs  main.rs  map_handler.rs  topic_handler.rs
consumer/src/gen_energy_consumer/: run.py
consumer/src/scheduler/: run.py
dashboard/: Dockerfile  package.json  settings.js
dashboard/data/: .config.nodes.json  .config.runtime.json  .config.users.json  .flows.json.backup  .flows_cred.json.backup  flows.json  flows_cred.json
dashboard/data/lib/flows/: ParsePayload.json
docs/: charging.uxf  mqtt_topics.md  tick.uxf  tick_sequence.uxf
fusion_reactor/: Cargo.toml
fusion_reactor/src/: lib.rs  main.rs
mosquitto/data/: mosquitto.db
power_grid_factory/: Cargo.toml
power_grid_factory/src/: main.rs  shutdown.rs  spawn_tasks.rs  watchdog.rs
powercable/: Cargo.toml
powercable/src/: chart_entry.rs  lib.rs  subscribe_to.rs
powercable/src/charger/: charge_accept.rs  charge_offer.rs  charge_port.rs  charge_request.rs  mod.rs  reserve.rs
powercable/src/offer/: mod.rs  offer_handler.rs  structure.rs
powercable/src/tickgen/: mod.rs
tick_gen/: run.py
tickgen/: Cargo.toml
tickgen/src/: lib.rs  main.rs
transformer/: Cargo.toml
transformer/src/: lib.rs  main.rs  transformer.rs
turbine/: .gitignore  Cargo.toml  Dockerfile
turbine/src/: data_parser.rs  data_parser_structs.rs  ftp_access.rs  init.rs  lib.rs  locations.rs  main.rs  metadata.rs  turbine.rs
turbine/src/handler/: handle_offers.rs  handle_scale.rs  handle_tick.rs  handle_visible.rs  mod.rs
turbine/src/meta_data/: approximate_location.rs  meta_data_element.rs  meta_data_type.rs  meta_data_wrapper.rs  mod.rs
turbine/src/parsing/: cache.rs  download.rs  mod.rs  read.rs  temperature.rs  wind_data.rs
turbine/src/precalculated_turbine/: dump.rs  mod.rs
turbine/src/turbine/: aggregator.rs  base.rs  calculations.rs  mod.rs  power_coefficient.rs
turbine/test_data/: example_csv.csv
vehicle/: Cargo.toml
vehicle/src/: battery.rs  charger_handling.rs  database.rs  lib.rs  main.rs  topic_handler.rs  vehicle.rs
