[package]
name = "consumer"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.40"
reqwest = "0.12.15"
rumqttc = "0.24.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.140"
tokio = { version = "1", features = ["full"] }
powercable = { path = "../powercable" }
log = "0.4.27"
bytes = {version = "1.10.1", features = ["serde"] }