[package]
name = "fusion_reactor"
edition = "2021"
version.workspace = true
authors.workspace = true

[dependencies]
rumqttc = "0.24.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
powercable = { path = "../powercable" }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.140"
bytes = {version = "1.10.1", features = ["serde"] }