[package]
name = "power_grid_factory"
edition = "2021"
version.workspace = true
authors.workspace = true

[dependencies]
rumqttc = "0.24.0"
tokio = { version = "1", features = ["full"] }
powercable = { path = "../powercable" }
consumer = { path = "../consumer" }
turbine = { path = "../turbine" }
transformer = { path = "../transformer" }
charger = { path = "../charger" }
vehicle = { path = "../vehicle" }
fusion_reactor = { path = "../fusion_reactor" }
tickgen = { path = "../tickgen" }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.140"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["ansi"] }
tracing-appender = "0.2"