[package]
name = "powercable"
edition = "2021"
version.workspace = true
authors.workspace = true

[dependencies]
chrono = "0.4.40"
csv = "1.3.1"
tracing = "0.1"
reqwest = "0.12.15"
rumqttc = "0.24.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.140"
tokio = { version = "1", features = ["full"] }
rand = "0.9.1"
bytes = "1.10.1"
fake = { version = "4", features = ["derive"] }
bitcode = "0.6.6"
