[package]
name = "transformer"
edition = "2021"
version.workspace = true
authors.workspace = true

[dependencies]
rumqttc = "0.24.0"
tokio = { version = "1", features = ["full"] }
log = "0.4.27"
powercable = { path = "../powercable" }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.140"