[package]
name = "turbine"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.40"
csv = "1.3.1"
env_logger = "0.11.8"
log = "0.4.27"
reqwest = "0.12.15"
rumqttc = "0.24.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.140"
tokio = { version = "1", features = ["full"] }
zip-extract = "0.2.2"
powercable = { path = "../powercable" }
rand = "0.9.1"
